--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
+    
     <title>GoT example</title>
 </head>
 <body>
